samples/_failures_safe/1761328413_5575f6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7b5d01b3.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_7b5d01b3.c:183:5: error: expected declaration or statement at end of input
  183 |     }
      |     ^
